testdata/invalid/invalid_op_code_5.bop
[opcode(1111111111111111111111111111111111111111111111111111111111111111111111111)]